--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 </head>
 
 <body>
-    <h1>Color Flipper</h1>
-    <button id="green"><Strong>Green</Strong></button>
-    <button id="red"><strong>Red</strong></button>
-    <button id="blue"><strong>Blue</strong></button>
-    <button id="random"><strong>Random</strong></button>
+
+    <div class="container">
+        <h1>Color Flipper</h1>
+
+        <div class="container-btns">
+            <div class="button" type="button" id="green"><Strong>Green</Strong></div>
+            <div class="button" type="button" id="red"><strong>Red</strong></div>
+            <div class="button" type="button" id="blue"><strong>Blue</strong></div>
+            <div class="button" type="button" id="random"><strong>Random</strong></div>
+        </div>
+    </div>
 </body>
 
 <script src="script.js"></script>
