--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mini Projects</title>
+    <title>Palindrome Checker</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="container">
-        <h1>Color Flipper</h1>
-
-        <div class="container-btns">
-            <div class="button" type="button" id="green"><Strong>Green</Strong></div>
-            <div class="button" type="button" id="red"><strong>Red</strong></div>
-            <div class="button" type="button" id="blue"><strong>Blue</strong></div>
-            <div class="button" type="button" id="random"><strong>Random</strong></div>
+    <div class="container d-flex flex-column align-items-center">
+        <h1 class="mb-4">PALINDROME CHECKER</h1>
+        <div class="mb-4">
+            <input class="form-control" id="input" type="text" placeholder="type a word">
         </div>
+        <button class="btn btn-primary px-3 mb-4" onclick="check()">Check it</button>
+        <div id="result"></div>
+        </p>
+        <script src="script.js"></script>
     </div>
 </body>
-
-<script src="script.js"></script>
 
 </html>
