Add quote generator feature with styling and navigation updates

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </div>
     </nav>
     <a href="/views/palindrome.html">Is it palindrome?</a> <br>
-    <a href="/views/flipper.html">Color Flipper</a>
-    <a href=""></a>
+    <a href="/views/flipper.html">Color Flipper</a> <br>
+    <a href="/views/quotes.html">Random quote generator</a>
     <a href=""></a>
     <a href=""></a>
 </body>
